[package]
name = "arpchat-rs"
version = "1.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2021"
rust-version = "1.83"
build = "build.rs"

[dependencies]
chrono = "0.4.39"
crossbeam = "0.8.4"
cursive = { version = "0.21.1", features = ["ansi", "toml"]}
directories = "5.0.1"
fern = "0.7.1"
gethostname = "0.5.0"
log = "0.4.22"
pnet = "0.35.0"
once_cell = "1.20.2"
rand = "0.8.5"
rust-i18n = "3.1.2"
thiserror = "2.0.9"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["strum_macros"]}
strum_macros = "0.26.4"
smaz = "0.1.0"

[profile.release]
lto = true
